--- a/07-design-qr/QR PROJECT/INDEX.HTML
+++ b/07-design-qr/QR PROJECT/INDEX.HTML
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>create qr code</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 
     <link rel="stylesheet" href="QR STYLE.CSS">
     </head>
 <body>
     <div class="card"> 
-<IMG width="100%" src="/QR PROJECT/qr image.jpg" alt=""></IMG>  
+<IMG width="100%" src="qr image.jpg" alt=""></IMG>  
 <h2>automobile service center building project</h2>
 <p>scan the qr code to visit<br> the automobile service center to take the appoinment for the car service.</p>
 </div>
