--- a/02-PORTFOLIO/index.html
+++ b/02-PORTFOLIO/index.html
@@ -62,8 +62,7 @@
                         <div class="home-info padd-15 ">
                             <h3 class="hello">Hello, my name is <span class="name">Saurabh Nishad</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">Web designer</span></h3>
-                            <p>I'm a web designer with extensive experience for over 10 years. My expertise is to create
-                                and website design , graphic design , any many more...</p>
+                            <p>A professional UI/UX & full-stack web developer. I completed several courses in HTML, CSS, javascript, bootstrap, SQL, PHP & WordPress. Aso I have coding skills in c++, java & C# programming language.</p>
                             <a href="#" class="btn">More About Me</a>
                         </div>
                         <div class="home-img padd-15 ">
@@ -89,12 +88,10 @@
                             <div class="row">
                                 <div class="about-text padd-15">
                                     <h3>I'm Saurabh Nishad and <span>Web developer</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius expedita,
-                                        incidunt, autem id omnis inventore doloribus rerum sint ducimus asperiores et?
-                                        Illo molestias ullam consequatur, dolorem pariatur esse eaque ducimus
-                                        necessitatibus aspernatur accusantium excepturi, enim, quos beatae incidunt
-                                        deserunt voluptatem delectus labore at exercitationem saepe. Obcaecati assumenda
-                                        veniam rem aliquid placeat incidunt soluta ex saepe?</p>
+                                    <p>Energetic B.Tech CSE student driven by curiosity and passion for software development. Dedicated to making meaningful contributions in the tech industry. Proficient in building dynamic web applications using HTML, CSS, and JavaScript .
+                                        • Eager to learn new things and believe in giving my 100% in every task that I perform.
+                                        • Believes in working in a domain, which encourages me to succeed and grow professionally.
+                                        • Striving to outdo who I was yesterday .</p>
                                 </div>
                             </div>
                             <div class="row">
@@ -174,37 +171,29 @@
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i>2013 - 2015
+                                                        <i class="fa fa-calendar"></i>2021-2025
                                                     </h3>
-                                                    <h4 class="timeline-title">Master in Computer Science</h4>
-                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur
-                                                        adipisicing elit. Officia obcaecati voluptatum perspiciatis
-                                                        dolore sapiente quisquam magnam incidunt cumque sunt perferendis
-                                                        deleniti numquam unde, maiores cum?</p>
+                                                    <h4 class="timeline-title">B.Tech</h4>
+                                                    <p class="timeline-text">B.Tech in CSE - AI
+                                                        From Babu Banarasi Das Engineering College</p>
                                                 </div>
                                                 <!-- timeline item -->
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i>2013 - 2015
+                                                        <i class="fa fa-calendar"></i>2020 - 2021
                                                     </h3>
-                                                    <h4 class="timeline-title">Master in Computer Science</h4>
-                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur
-                                                        adipisicing elit. Officia obcaecati voluptatum perspiciatis
-                                                        dolore sapiente quisquam magnam incidunt cumque sunt perferendis
-                                                        deleniti numquam unde, maiores cum?</p>
+                                                    <h4 class="timeline-title">Intermediate</h4>
+                                                    <p class="timeline-text">completed 10+2 from K D public inter college darshan nagar ayodhya. </p>
                                                 </div>
                                                 <!-- timeline item -->
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i>2013 - 2015
+                                                        <i class="fa fa-calendar"></i>2017 - 2018
                                                     </h3>
-                                                    <h4 class="timeline-title">Master in Computer Science</h4>
-                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur
-                                                        adipisicing elit. Officia obcaecati voluptatum perspiciatis
-                                                        dolore sapiente quisquam magnam incidunt cumque sunt perferendis
-                                                        deleniti numquam unde, maiores cum?</p>
+                                                    <h4 class="timeline-title">highi-school</h4>
+                                                    <p class="timeline-text">completed 10th from tiny tots sr sec school shadatganj ayodhya.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -219,37 +208,28 @@
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i>2013 - 2015
+                                                        <i class="fa fa-calendar"></i>2023 - 2045
                                                     </h3>
-                                                    <h4 class="timeline-title">Master in Computer Science</h4>
-                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur
-                                                        adipisicing elit. Officia obcaecati voluptatum perspiciatis
-                                                        dolore sapiente quisquam magnam incidunt cumque sunt perferendis
-                                                        deleniti numquam unde, maiores cum?</p>
+                                                    <h4 class="timeline-title">Portfolio website</h4>
+                                                    <p class="timeline-text">Stunning sample portfolio website developed by Html , Css and Javascript which is completely responsive .</p>
                                                 </div>
                                                 <!-- timeline item -->
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i>2013 - 2015
+                                                        <i class="fa fa-calendar"></i>2023 - 2024
                                                     </h3>
-                                                    <h4 class="timeline-title">Master in Computer Science</h4>
-                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur
-                                                        adipisicing elit. Officia obcaecati voluptatum perspiciatis
-                                                        dolore sapiente quisquam magnam incidunt cumque sunt perferendis
-                                                        deleniti numquam unde, maiores cum?</p>
+                                                    <h4 class="timeline-title">Ayodhya photoshoot project</h4>
+                                                    <p class="timeline-text"> photoshoot of Ayodhya, with its rich historical and cultural significance, provides a captivating backdrop for photography. </p>
                                                 </div>
                                                 <!-- timeline item -->
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i>2013 - 2015
+                                                        <i class="fa fa-calendar"></i>2023 - 2024
                                                     </h3>
-                                                    <h4 class="timeline-title">Master in Computer Science</h4>
-                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur
-                                                        adipisicing elit. Officia obcaecati voluptatum perspiciatis
-                                                        dolore sapiente quisquam magnam incidunt cumque sunt perferendis
-                                                        deleniti numquam unde, maiores cum?</p>
+                                                    <h4 class="timeline-title">Recipe-page</h4>
+                                                    <p class="timeline-text">creating a recipe page With the magic of HTML and CSS, this recipe page isn’t just about ingredients and instructions it’s about creating a delightful experience for food enthusiast.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -279,9 +259,8 @@
                                 <div class="icon">
                                     <i class="fa fa-mobile-alt"></i>
                                 </div>
-                                <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis consectetur
-                                    dicta
+                                <h4>Python Developer</h4>
+                                <p>Keeping up with the latest trends and technologies in Python and Writing efficient code and reusable code.
                                 </p>
                             </div>
                         </div>
@@ -292,8 +271,8 @@
                                 <div class="icon">
                                     <i class="fa fa-laptop-code"></i>
                                 </div>
-                                <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo animi alias facere?
+                                <h4>Web App Developer</h4>
+                                <p>Creating Web Application and Writing well-designed, testable, efficient code by using best software development practices
                                 </p>
                             </div>
                         </div>
@@ -304,8 +283,8 @@
                                 <div class="icon">
                                     <i class="fa fa-palette"></i>
                                 </div>
-                                <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non iure blanditiis!
+                                <h4>Web Developer</h4>
+                                <p>Specializations in the field of full stack development and creating visually appealing and easy to navigate websites
                                 </p>
                             </div>
                         </div>
@@ -317,8 +296,7 @@
                                     <i class="fa fa-code"></i>
                                 </div>
                                 <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima facilis et
-                                    distinctio?
+                                <p>Creating the look and feel of a website: its graphic elements, layout and navigation , making website look visually appealing
                                 </p>
                             </div>
                         </div>
@@ -329,8 +307,8 @@
                                 <div class="icon">
                                     <i class="fa fa-search"></i>
                                 </div>
-                                <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, voluptate quia.
+                                <h4>Javascript Developer</h4>
+                                <p>Building sustainable coding that may be used in the future , Enhancing performance of the website
                                 </p>
                             </div>
                         </div>
@@ -341,9 +319,8 @@
                                 <div class="icon">
                                     <i class="fa fa-bullhorn"></i>
                                 </div>
-                                <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil exercitationem nisi
-                                    vero.
+                                <h4>C/C++ Programmer</h4>
+                                <p>Using the C++ programming language to create software Applications and other types of programs
                                 </p>
                             </div>
                         </div>
