updated the html file

--- a/02-PORTFOLIO/index.html
+++ b/02-PORTFOLIO/index.html
@@ -63,7 +63,7 @@
                             <h3 class="hello">Hello, my name is <span class="name">Saurabh Nishad</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">Web designer</span></h3>
                             <p>A professional UI/UX & full-stack web developer. I completed several courses in HTML, CSS, javascript, bootstrap, SQL, PHP & WordPress. Aso I have coding skills in c++, java & C# programming language.</p>
-                            <a href="#" class="btn">More About Me</a>
+                            <a href="#" class="btn">More About Me ...</a>
                         </div>
                         <div class="home-img padd-15 ">
                             <img src="Images/hero1.jpg" alt="" srcset="">
